--- a/VSCode/Index.html
+++ b/VSCode/Index.html
@@ -1,9 +1,6 @@
 fhgadhfgbflgb
 vjhvjkzxcbvb
-<<<<<<< HEAD
 nuevo cambio 15
-=======
-nuevo cambio 14
->>>>>>> ebf5dda943649fee7aa3fd02d4658e1cbc0f4066
 Nueva modificacion
 Modificado 3
+master
