--- a/VSCode/Index.html
+++ b/VSCode/Index.html
@@ -3,11 +3,4 @@ vjhvjkzxcbvb
 nuevo cambio 15
 Nueva modificacion
 Modificado 3
-<<<<<<< HEAD
-rama
-Rama
-Rama23
-=======
-Master
-Master22
->>>>>>> 3b11ecc3f0bbb907658ab5cd7b73bc084a0d466f
+rama_1
